--- a/chemwar/templates/index.html
+++ b/chemwar/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     
-<div class="container-fluid mt-4">
+<div class="container-fluid pt-4">
 
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
