--- a/chemwar/templates/accounts.html
+++ b/chemwar/templates/accounts.html
@@ -44,7 +44,13 @@
                             <td>{{user.username}}</td>
                             <td>{% for l in user.password %}*{% endfor %}</td>
                             <td>{{user.level}}</td>
-                            <td>{{ groups[user.group-1] }}</td>
+                            <td>
+                                {% for group in groups %}
+                                    {% if group.id == user.group %}
+                                        {{group.name}}
+                                    {% endif %}
+                                {% endfor %}
+                            </td>
                             <td>{{user.initial}}</td>
                             <td>{{user.surname}}</td>
                             <td>{{user.blood_group}}</td>
