--- a/chemwar/templates/base.html
+++ b/chemwar/templates/base.html
@@ -205,7 +205,7 @@
                             {% if current_user.is_authenticated %}
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ current_user.username
+                                <span class="mr-2 d-none d-inline text-gray-600 small">{{ current_user.username
                                     }}</span>
                                 <!-- Dropdown - User Information -->
                                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
