refactor: Remove d-lg class

--- a/chemwar/templates/base.html
+++ b/chemwar/templates/base.html
@@ -231,7 +231,7 @@
                             </a>
                             {% else %}
                             <a href="{{ url_for('sign_in') }}" class="nav-link dropdown-toggle">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Sign In</span>
+                                <span class="mr-2 d-none d-inline text-gray-600 small">Sign In</span>
                             </a>
                             {% endif %}
                         </li>
