refactor: Update classes of add buttons

--- a/chemwar/templates/accounts.html
+++ b/chemwar/templates/accounts.html
@@ -17,7 +17,7 @@
     <div class="card shadow mb-4">
         <div class="card-header py-3">
             <h5 class="m-0 font-weight-bold users-table-title">ChemWaR Users</h5>
-            <a href="#" id="add-user" class="d-none d-sm-inline-block btn btn-sm btn-success shadow-sm">
+            <a href="#" id="add-user" class="d-none d-inline-block btn btn-sm btn-success shadow-sm">
                 <i class="fas fa-user-plus fa-sm text-white-50" aria-hidden="true"></i> Add User</a>
         </div>
         <div class="card-body">
@@ -59,7 +59,7 @@
                                 <td></td>
                             {% else %}
                                 <td class="text-center text-danger">
-                                    <a href="#" id="delete-{{ user.id }}" class="d-none d-sm-inline-block btn btn-sm btn-danger delete-button shadow-sm">
+                                    <a href="#" id="delete-{{ user.id }}" class="d-none d-inline-block btn btn-sm btn-danger delete-button shadow-sm">
                                         <i class="fas fa-trash-can fa-sm text-white-50" aria-hidden="true"></i></a>
                                     <!-- <i id="delete-{{ user.id }}" class="fa-solid fa-trash-can delete-account"></i> -->
                                 </td>
