--- a/chemwar/templates/groups.html
+++ b/chemwar/templates/groups.html
@@ -17,7 +17,7 @@
     <div class="card shadow mb-4">
         <div class="card-header py-3">
             <h5 class="m-0 font-weight-bold users-table-title">ChemWaR Groups</h5>
-            <a href="#" id="add-group" class="d-none d-sm-inline-block btn btn-sm btn-success shadow-sm">
+            <a href="#" id="add-group" class="d-none d-inline-block btn btn-sm btn-success shadow-sm">
                 <i class="fas fa-plus fa-sm text-white-50" aria-hidden="true"></i> Add Group</a>
         </div>
         <div class="card-body">
