--- a/chemwar/static/css/custom-style.css
+++ b/chemwar/static/css/custom-style.css
@@ -153,6 +153,16 @@ main {
   padding: 5rem;
 }
 
+@media (max-width: 768px) {
+  #add-user-modal,
+  #add-group-modal  {
+  height: calc(100vh - 4.375rem);
+  width: 100%;
+  padding: 0;
+  padding-top: 5rem;
+}
+}
+
 .add-user-content #initial{
   width: 20%;
 }
